# iPDb

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  out_fanar_1.csv  out_o4mini_1.csv  tmp_out_o4mini_1.csv
.github/workflows/: OnTag.yml  SwiftRelease.yml  iPDbOSX.yml
scripts/: package_build.py
src/: CMakeLists.txt
src/catalog/: catalog.cpp  catalog_set.cpp
src/catalog/catalog_entry/: CMakeLists.txt  duck_schema_entry.cpp  model_catalog_entry.cpp
src/common/: enum_util.cpp
src/common/enums/: catalog_type.cpp  expression_type.cpp  logical_operator_type.cpp  (+1 more)
src/execution/: CMakeLists.txt  expression_executor.cpp  physical_plan_generator.cpp
src/execution/expression_executor/: CMakeLists.txt  execute_predict.cpp
src/execution/operator/persistent/: physical_export.cpp
src/execution/operator/projection/: CMakeLists.txt  physical_gnn_predict.cpp  physical_predict.cpp
src/execution/operator/scan/: CMakeLists.txt  physical_predict_scan.cpp
src/execution/operator/schema/: CMakeLists.txt  physical_create_model.cpp
src/execution/physical_plan/: CMakeLists.txt  plan_create.cpp  plan_predict.cpp
src/main/: config.cpp  query_profiler.cpp
src/optimizer/: limit_pushdown.cpp  remove_unused_columns.cpp
src/parser/: parsed_expression_iterator.cpp  transformer.cpp
src/planner/: binder.cpp  expression_binder.cpp  expression_iterator.cpp  logical_operator_visitor.cpp
src/storage/: checkpoint_manager.cpp  wal_replay.cpp  write_ahead_log.cpp
src/transaction/: commit_state.cpp  wal_write_state.cpp
tools/shell/: CMakeLists.txt  shell.cpp
(+92 files in other folders)
